Remove `github_username`
